# Telegram-Paul-Tudor-Jones

./: .env.example  .gitignore  DEPLOY-pythonanywhere.md  README.md  SETUP.md  com.shyam.tsg.plist  conftest.py  pyproject.toml  run.py
config/: pairs.yaml
memory/: CLAUDE.md  DECISIONS.md  LATEST_SEED.md  PROGRESS.md  SEEDS.md
scripts/: backtest.py  backtest_image.py  ctrader_list_accounts.py  ctrader_oauth.py  pa_supervisor.sh  scratch_trade.py  telegram_list_chats.py  telegram_login.py  telegram_login_test.py  tg_smoke_chart.py  tg_smoke_hi.py  tg_smoke_historical.py  tg_smoke_layout.py  tg_smoke_rr.py  tg_smoke_spot.py  tg_smoke_test_channel.py
src/tsg/: config.py  main.py  scanner.py
src/tsg/chart/: __init__.py  chartimg.py
src/tsg/execution/: __init__.py  sizing.py
src/tsg/feed/: __init__.py  client.py  pricing.py
src/tsg/post_trade/: __init__.py  notes.py
src/tsg/store/: __init__.py  db.py
src/tsg/strategy/: __init__.py  bias.py  levels.py  rr.py  signal.py  smc.py
src/tsg/tg/: __init__.py  bot.py  captions.py
src/tsg/tracker/: __init__.py  tracker.py
tests/: test_captions.py  test_chartimg_payload.py  test_main_refresh.py  test_rr.py  test_scanner_dup_ob.py  test_scanner_missed_entry.py  test_sizing.py  test_smc.py  test_tracker.py  test_usd_per_quote.py
