[project]
name = "tsg"
version = "0.1.0"
description = "FX Trade Signal Generator — SMC rules, OANDA data, Telegram delivery"
requires-python = ">=3.10"
dependencies = [
    "ctrader-open-api>=0.9.2",
    "twisted>=23.10",
    "service-identity>=24.0",
    "telethon>=1.36",
    "pandas>=2.1",
    "numpy>=1.26",
    "pandas-ta>=0.3.14b",
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
tsg = "tsg.main:run"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
